--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "p5-matter",
   "version": "1.0.0",
   "description": "Seamlessly integrate matter.js with p5.js",
-  "main": "scripts/p5-matter.js",
+  "main": "src/p5-matter.js",
   "author": "Palmer Paul <pzpaul2002@yahoo.com>",
   "license": "MIT",
   "dependencies": {
